# fltk-builder

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: pull_request.yml  rust.yml
examples/: anchors.rs  basic.rs  hello_button.rs  hello_button_traditional.rs  theming.rs
src/: id_map.rs  label_map.rs  lib.rs  prelude.rs
src/extensions/: builder.rs  callback.rs  map.rs  mod.rs  styling.rs
src/extensions/builder/: browser.rs  button.rs  display.rs  flex.rs  group.rs  image.rs  input.rs  menu.rs  mod.rs  table.rs  valuator.rs  widget.rs  window.rs
